apps/taskd/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "taskd"
spec:
  selector:
    app: "taskd"
  ports:
    - protocol: "TCP"
      port: 53589
      targetPort: "taskd"
